# quadcopter

./: .gitignore  README.md
LightControllerWRS/: LightControllerWRS.cpp  Makefile
QuadcopterControllerRogiken/include/: imu_filter.h
QuadcopterControllerRogiken/src/: CMakeLists.txt  QuadcopterController.cpp  imu_filter.cpp
QuadcopterControllerWRS/: CMakeLists.txt  Makefile  package.xml
QuadcopterControllerWRS/include/: imu_manager.hpp  rgbd_camera.hpp
QuadcopterControllerWRS/src/: CMakeLists.txt  QuadcopterControllerWRS.cpp  camera_controller.cpp  imu_debugger.cpp  imu_manager.cpp  rgbd_camera.cpp
cnoid/: QuadcopterJoystick.cnoid  QuadcopterJoystickRogiken.cnoid  QuadcopterJoystickWRS.cnoid  QuadcopterJoystickWRSQR.cnoid  QuadcopterJoystickWRSTS1.cnoid  QuadcopterJoystick_light.cnoid
cnoid/sample/: QuadcopterJoystick.cnoid  QuadcopterJoystickRogiken.cnoid  QuadcopterJoystick_light.cnoid
model/: quadcopter_wrs.body
rtr_quadcopter_controller/: CMakeLists.txt  package.xml
rtr_quadcopter_controller/include/: imu_debugger.hpp  imu_manager.hpp
rtr_quadcopter_controller/src/: CMakeLists.txt  imu_filter.cpp  imu_manager.cpp  rtr_quadcopter_controller.cpp
sample/LightControllerWRS/: LightControllerWRS.cpp
sample/QuadcopterControllerRogiken/: CMakeLists.txt  package.xml
sample/simplecontroller/: Makefile
test/: QuadcopterJoystick_light.cnoid
