<?xml version="1.0"?>
<package format="2">
  <name>rtr_quadcopter_controller</name>
  <version>1.0.0</version>
  <description>
    Quadcopter Controller on Choreonoid
  </description>
  <maintainer email="hoge@example.com">hoge</maintainer>
  <author email="hoge@example.com">hoge</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_ros_plugin</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
