<?xml version="1.0"?>
<package format="2">
  <name>rtr_quadcopter_controller</name>
  <version>1.0.0</version>
  <description>
    Quadcopter Controller on Choreonoid
  </description>
  <maintainer email="hoge@example.com">hoge</maintainer>
  <author email="hoge@example.com">hoge</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>rtr_msgs</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
